After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697555 - Memory corruption in sound panel
Memory corruption in sound panel
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Sound
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: Control center sound maintainer(s)
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-08 12:52 UTC by Lionel Landwerlin
Modified: 2013-04-16 10:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix memory corruption (1.02 KB, patch)
2013-04-08 12:53 UTC, Lionel Landwerlin
committed Details | Review

Description Lionel Landwerlin 2013-04-08 12:52:22 UTC
From time to time I get a memory corruption on the sound panel when changing the sound effects' theme.
A variable should just be set to NULL to fix this.
Comment 1 Lionel Landwerlin 2013-04-08 12:53:10 UTC
Created attachment 240948 [details] [review]
Fix memory corruption
Comment 2 Bastien Nocera 2013-04-15 10:34:30 UTC
Review of attachment 240948 [details] [review]:

Looks good to commit other than that.

::: panels/sound/gvc-sound-theme-chooser.c
@@ +673,3 @@
         if (g_strcmp0 (last_theme, chooser->priv->current_theme) != 0) {
                 g_free (chooser->priv->current_parent);
+                chooser->priv->current_parent = NULL;

g_clear_pointer() instead?
Comment 3 Lionel Landwerlin 2013-04-16 10:16:02 UTC
Review of attachment 240948 [details] [review]:

Committed to master and gnome-3-8