sound: fix potential memory corruption

https://bugzilla.gnome.org/show_bug.cgi?id=697555